// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLink renders 1`] = `
<a
  className="Container-j1xqi2-0 jtcqje"
/>
`;

exports[`TabLink renders Href 1`] = `
<a
  className="Container-j1xqi2-0 jtcqje"
  href="www.google.com"
/>
`;

exports[`TabLink renders count 1`] = `
<a
  className="Container-j1xqi2-0 jtcqje"
>
  <span
    className="TabLink__CountWrapper-u6qu8y-1 kVKWpR"
  >
    2
  </span>
</a>
`;

exports[`TabLink renders element left 1`] = `
<a
  className="Container-j1xqi2-0 jtcqje"
>
  <div
    className="TabLink__ElementLeftWrapper-u6qu8y-0 bbgJEx"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLink renders isTop 1`] = `
<a
  className="Container-j1xqi2-0 kKuXzF"
/>
`;

exports[`TabLink renders size 1`] = `
<a
  className="Container-j1xqi2-0 fDacHl"
  size="small"
/>
`;
